--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -950,7 +950,7 @@ Resources:
         TemplateURL: !Sub "https://${TemplateBucketName}.s3.amazonaws.com/${Environment}/templates/nested/privatelink.yaml"
         Parameters:
           Environment: !Sub "${Environment}"
-          EKSClusterName: !Sub "${AWS::StackName}"
+          EksClusterName: !Sub "${AWS::StackName}"
 
 Outputs:
   SubstackName:
