--- a/templates/nested/2-subnets/mysql-v2.yaml
+++ b/templates/nested/2-subnets/mysql-v2.yaml
@@ -13,7 +13,6 @@ Metadata:
           - DBSubnet2
           - DBClusterIdentifier
           - Environment
-          - EksClusterName
           - DBInstanceClass
           - EngineVersion
           - MasterUser
@@ -34,8 +33,6 @@ Metadata:
         default: Aurora Cluster Identifier
       Environment:
         default: The Environment
-      EksClusterName:
-        default: The EksClusterName
       DBInstanceClass:
         default: Aurora Instance Type
       EngineVersion:
@@ -68,9 +65,6 @@ Parameters:
   Environment:
     Type: String
     Description: The Environment
-  EksClusterName:
-    Type: String
-    Description: The EksClusterName
   DBInstanceClass:
     AllowedValues:
       - db.t3.small
@@ -109,7 +103,7 @@ Resources:
         Type: "AWS::EC2::SecurityGroupIngress"
         Properties:
             GroupId: !Ref RDSSecurityGroup
-            SourceSecurityGroupId: !Sub "{{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}" 
+            SourceSecurityGroupId: !Ref NodeSecurityGroup
             SourceSecurityGroupOwnerId: !Ref AWS::AccountId
             FromPort: 3306
             IpProtocol: "tcp"
