--- a/templates/nested/2-subnets/admin-v2.yaml
+++ b/templates/nested/2-subnets/admin-v2.yaml
@@ -393,9 +393,9 @@ Resources:
                 NLBDNS=$(aws elbv2 describe-load-balancers --region ${AWS::Region} --names ${EksClusterName}-kotsadm --query LoadBalancers[0].DNSName --output text --no-paginate)
                 parameter='/${Environment}/${EksClusterName}/kotsadm/nlbdns'
                 if [ "$EXTRA_TAGS_FLAG" == "true" ]; then
-                  aws ssm put-parameter --region ${AWS::Region} --name "$parameter" --type "String" --value "$NLBARN" --overwrite --no-paginate
+                  aws ssm put-parameter --region ${AWS::Region} --name "$parameter" --type "String" --value "$NLBDNS" --overwrite --no-paginate
                 else
-                  aws ssm put-parameter --region ${AWS::Region} --name "$parameter" --type "String" --value "$NLBARN" --overwrite --no-paginate
+                  aws ssm put-parameter --region ${AWS::Region} --name "$parameter" --type "String" --value "$NLBDNS" --overwrite --no-paginate
                 fi
                 ALBARN=$(aws elbv2 describe-load-balancers --region ${AWS::Region} --names ${EksClusterName}-datahub --query LoadBalancers[0].LoadBalancerArn --output text --no-paginate)
                 parameter='/${Environment}/${EksClusterName}/admin/albarn'
