--- a/templates/nested/2-subnets/admin-v2.yaml
+++ b/templates/nested/2-subnets/admin-v2.yaml
@@ -248,6 +248,11 @@ Resources:
               mode: "000750"
               owner: root
               group: root
+            /tmp/check_extra_tags-v3.sh:
+              source: !Sub "https://s3.${AWS::Region}.amazonaws.com/${TemplateBucketName}/${Environment}/scripts/check_extra_tags-v3.sh"
+              mode: "000750"
+              owner: root
+              group: root
             /tmp/admin_bootstrap.sh:
               content: !Sub |
                 #!/bin/bash
@@ -420,8 +425,27 @@ Resources:
                   echo "Appending extra tags to EKS node group:${EksClusterName}..."
                   NODEGROUP_ARN=$(aws eks describe-nodegroup --region ${AWS::Region} --cluster-name ${EksClusterName} --nodegroup ${EksClusterName} --query nodegroup.nodegroupArn --output text)
                   aws eks tag-resource --region ${AWS::Region} --resource-arn $NODEGROUP_ARN --tags "$EXTRA_TAGS_V1"
-                fi
 
+                  echo "Appending extra tags to SSM parameter store for stack:${EksClusterName}..."
+                  SSM_TAG_STATUS=$(aws ssm list-tags-for-resource --region ${AWS::Region} --resource-type "Parameter" --resource-id "/cfn-registry/awsqs-eks-cluster/version" --query "TagList[*].Key" --output text|wc -l)
+                  if [ $SSM_TAG_STATUS -eq 0 ]; then
+                    EXTRA_TAGS_V3=$(/tmp/check_extra_tags-v3.sh ${Environment} ${EksClusterName})
+                    aws ssm add-tags-to-resource --region ${AWS::Region} --resource-type "Parameter" --resource-id "/cfn-registry/awsqs-eks-cluster/version" --tags "$EXTRA_TAGS_V3"
+                    aws ssm add-tags-to-resource --region ${AWS::Region} --resource-type "Parameter" --resource-id "/cfn-registry/awsqs-kubernetes-get/version" --tags "$EXTRA_TAGS_V3"
+                    aws ssm add-tags-to-resource --region ${AWS::Region} --resource-type "Parameter" --resource-id "/cfn-registry/awsqs-kubernetes-helm/version" --tags "$EXTRA_TAGS_V3"
+                    aws ssm add-tags-to-resource --region ${AWS::Region} --resource-type "Parameter" --resource-id "/cfn-registry/awsqs-kubernetes-resource/version" --tags "$EXTRA_TAGS_V3"
+                  fi
+                  #ACCOUNT_ID=$(aws sts get-caller-identity --region ${AWS::Region} --query Account --output text)
+                  #LAMBDA_TAG_STATUS=$(aws lambda list-tags --region ${AWS::Region} --resource arn:aws:lambda:${AWS::Region}:$ACCOUNT_ID:function:awsqs-kubernetes-resource-proxy-prod-datahub --query "Tags" --output text|wc -l)
+                  #if [ $LAMBDA_TAG_STATUS -eq 0 ]; then
+                  #  EXTRA_TAGS_V1=$(/tmp/check_extra_tags.sh ${Environment} ${EksClusterName})
+                  #  FUNCTIONS="awsqs-kubernetes-resource-proxy-prod-datahub"
+                  #  for i in $(echo $FUNCTIONS | sed "s/,/ /g")
+                  #  do
+                  #    aws lambda tag-resource --region ${AWS::Region} --resource arn:aws:lambda:${AWS::Region}:$ACCOUNT_ID:function:$i --tags "$EXTRA_TAGS_V1"
+                  #  done
+                  #fi
+                fi
               mode: "000750"
               owner: root
               group: root
